--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -27,7 +27,7 @@ nav {
     justify-content: space-between;
     padding: 0 150px;
     height: 100PX;
-    
+
 }
 
 .nav-title {
@@ -65,7 +65,7 @@ nav a {
 .heading {
     background-color: #FFF8F3;
     background-image: url("../images/header_bg.png");
-    background-repeat:no-repeat;
+    background-repeat: no-repeat;
     background-position: bottom right;
 
 }
@@ -92,20 +92,20 @@ nav a {
 .second-part {
     margin-left: 150px;
     max-width: 700px;
-    
+
 
 
 }
 
 #greatings {
-    color:#474747;
-    
+    color: #474747;
+
     font-size: 45px;
     font-style: normal;
     margin-bottom: 0px;
 
-    
-    
+
+
 
 
 
@@ -115,9 +115,9 @@ nav a {
     color: #181818;
 
     font-size: 85px;
-    
+
     font-weight: 700;
-    
+
     margin-top: 5px;
     margin-bottom: 5px;
 
@@ -129,15 +129,55 @@ nav a {
 
     font-size: 18px;
 
-    
+
     margin-bottom: 20px;
     margin-top: 0px;
-    
-    
+
+
 }
-    
-.image-hardy{
+
+.image-hardy {
     margin-top: 290px;
     margin-right: 25px;
 }
 
+/* about us section styles */
+
+.about {
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 70px 150px;
+    padding: 100px 400px;
+}
+
+#about-text {
+    color: #181818;
+    text-align: center;
+
+    font-size: 35px;
+
+    font-weight: 700;
+
+}
+
+.about-para {
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+
+    font-weight: 400;
+    line-height: 30px;
+}
+
+.below-section {
+    color: #757575;
+    text-align: center;
+
+    font-size: 20px;
+    
+    font-weight: 400;
+    line-height: 30px;
+
+    display: flex;
+    justify-content: space-between;
+}
