--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -62,6 +62,12 @@ nav a {
 }
 
 /*about header */
+
+main section {
+    margin-top: 30px;
+
+}
+
 .heading {
     background-color: #FFF8F3;
     background-image: url("../images/header_bg.png");
@@ -185,10 +191,11 @@ nav a {
 
 /* What i do section */
 
-.what{
+.what {
     text-align: center;
-    margin:30px 350px;
+    margin: 30px 350px;
 }
+
 .header-what {
     color: #181818;
     text-align: center;
@@ -202,9 +209,121 @@ nav a {
 .what-para {
     color: #757575;
     text-align: center;
-    
+
     font-size: 18px;
-    
+
     font-weight: 400;
 
 }
+
+
+
+/* skill styles */
+
+.language {
+    display: flex;
+    gap: 24px;
+
+    width: 1140px;
+    margin: 0px auto;
+
+
+}
+
+.first-language {
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    padding: 30px;
+
+
+}
+
+.skill-head {
+    color: #181818;
+    text-align: center;
+
+    font-size: 20px;
+
+    font-weight: 700;
+    line-height: normal;
+}
+
+.skill-para {
+    color: #757575;
+
+    font-size: 16px;
+
+    font-weight: 400;
+    line-height: 28px;
+
+    margin-top: 20px;
+}
+
+
+/* resume styles */
+
+
+
+#info-head {
+    color: #181818;
+    text-align: center;
+
+    font-size: 35px;
+
+    font-weight: 700;
+    line-height: normal;
+    margin-top: 30px;
+}
+
+.information {
+    display: flex;
+    gap: 20px;
+    background-color: #FFF;
+    width: 1140px;
+    margin: 0px auto;
+
+
+}
+
+.resume-head {
+    color: #474747;
+
+    font-size: 30px;
+
+    font-weight: 700;
+    line-height: normal;
+}
+
+.resume-next {
+    color: #474747;
+
+    font-size: 25px;
+
+    font-weight: 700;
+}
+    .some {
+        color: #757575;
+
+        font-size: 20px;
+
+        font-weight: 600;
+        line-height: normal;
+    }
+
+    .sust {
+        color: #757575;
+
+        font-size: 16px;
+    
+        font-weight: 400;
+        line-height: 28px;
+    }
+    #btn{
+        text-align: center;
+        margin-left: 900px;
+
+        margin-top: 30px;
+    }
+
+    /* footer styles */
